[project]
name = "mpvmtk"
version = "0.1.0"
description = "Multi-Parameter Volcano Monitoring Toolkit."
readme = "README.md"
license = {text = "GPLv3"}
requires-python = ">=3.12"
authors = [
    {name = "Conor Bacon", email = "conor.bacon@norsar.no"}
]
maintainers = [
    {name = "Conor Bacon", email = "conor.bacon@norsar.no"}
]
keywords = ["volcanology", "data", "science", "instrumentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "h5py",
    "matplotlib",
    "numpy",
    "obspy",
    "pandas",
    "typer",
]

[project.urls]
GitHub = "https://github.com/hemmelig/mpvm-tk"
Issues = "https://github.com/hemmelig/mpvm-tk/issues"

[project.scripts]
mpvm = "mpvmtk.cli.main:entrypoint"

[project.optional-dependencies]
dev = ["ruff", "ipython"]
docs = ["Sphinx >= 1.8.1", "docutils"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
include = ["mpvmtk*"]

[tool.black]
line-length = 88
